# VANGUARD

./: app.js  grievances.html  shared-data.js  theme-toggle.js  transit-stops.html  transit-stops.js
Final Phase/: .env  .gitignore  README.md  admin-feedback.html  analysis.html  analysis.js  dashboard.js  grievances.js  index.html  india-dataset.js  package-lock.json  package.json  reports.js  styles.css
Final Phase/kafka_pipeline/: config.py  consumer.py  create_topics.py
Final Phase/scripts/: start-backend.cjs
VANGUARD-Phase-1/: .coverage  README.md  demo_output.txt  launch_dashboard.py  pyproject.toml  run_demo.py
VANGUARD-Phase-1/accessibility_auditor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
VANGUARD-Phase-1/data/: demo_grievances.csv  demo_stops.csv
VANGUARD-Phase-1/docs/: API_REFERENCE.txt  ARCHITECTURE.md  DATA_SCHEMA.md  QUICK_START.md
VANGUARD-Phase-1/src/: __init__.py  clustering.py  dashboard.py  data_generator.py  data_loaders.py  evaluation.py  gap_scorer.py  image_processor.py  main.py  models.py  object_detection.py  pdf_reporter.py  pipeline.py  standards.py  text_processing.py  utils.py
VANGUARD-Phase-1/tests/: test_clustering.py  test_evaluation.py  test_gap_scorer.py  test_gtfs_loader.py  test_object_detection.py  test_pipeline.py
VANGUARD-Phase-2/: admin-feedback.js  app.js  dashboard.js  docker-compose.kafka.yml  grievances.html  grievances.js  index.html  package-lock.json  reports.html  shared-data.js  styles.css  transit-stops.html  transit-stops.js  vite.config.cjs
VANGUARD-Phase-2/backend/: app.py
backend/: app.py  requirements.txt
(+6 files in other folders)
